Updated subpath with new changes

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "redirects": [
       {
         "source": "/",
-        "destination": "/first-dog-cryptocurrency-millionare-barry",
+        "destination": "/dog-killed-after-eating-1.5-million-btc-seed-phrase-man-arrested",
         "permanent": true
       }
     ]
